--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,7 +16,7 @@
 
   /* FONTS */
   --ff-sans: "Poppins" ,sans-serif;
-  --h1: 700 2rem/125% var(--ff-sans);
+  --h1: 700 1.5rem/125% var(--ff-sans);
   --p-md: 400 0.85rem/170% var(--ff-sans);
   --p-sm: 400 0.75rem/170% var(--ff-sans);
 
@@ -63,7 +63,7 @@ img {
 }
 
 .container {
-  --max-width: 360px;
+  --max-width: 22.5rem;
 }
 
 /* UTILITY CLASS */
@@ -78,6 +78,8 @@ img {
 
 .grid {
   display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(16.875rem, 1fr));
 }
 
 .flex {
@@ -109,6 +111,8 @@ img {
 
 @media (width >= 80rem) {
   :root {
+    --h1: 700 2rem/125% var(--ff-sans);
+
     --gap-1: 2rem;
 
     --padding-block: 2rem;
