deslocamento de lista na seção profile

--- a/assets/css/profileSection.css
+++ b/assets/css/profileSection.css
@@ -33,10 +33,10 @@
         flex-direction: row;
       }
 
-      /* & ul[role="list"] {
+      & ul[role="list"] {
         margin-left: auto;
         width: 17.5rem;
-      } */
+      } 
     }
   }
 }
