--- a/assets/css/profileSection.css
+++ b/assets/css/profileSection.css
@@ -27,7 +27,7 @@
 }
 
 @media (width >= 80rem) {
-  & .profileSection {
+  .profileSection {
     .container {
       & div.flex {
         flex-direction: row;
